<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="eu.darken.apl.main.ui.MainActivity">


    <item
        android:id="@+id/action_reset_map"
        android:icon="@drawable/ic_restore_24"
        android:orderInCategory="100"
        android:title="@string/common_reset_action"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_reload_map"
        android:icon="@drawable/ic_refresh_24"
        android:orderInCategory="100"
        android:title="@string/common_refresh_action"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/label_settings"
        android:icon="@drawable/ic_settings_24"
        app:showAsAction="ifRoom" />
</menu>
